@@ -1,3 +1,13 @@
+2004-02-03  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_chain):
+	  handle chain parsing correctly in the multichain case
+	* ext/theora/theoradec.c: (gst_theora_dec_init), (_theora_ilog),
+	(theora_dec_from_granulepos), (theora_dec_to_granulepos),
+	(theora_dec_src_query), (theora_dec_src_event), (theora_dec_event),
+	(theora_dec_chain):
+	  handle events and queries correctly
+
 2004-02-03  David I. Lehn  <dlehn@users.sourceforge.net>
 
 	* .cvsignore:
